--- a/HandsOn/app/templates/index.html
+++ b/HandsOn/app/templates/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-
     <title>Air Quality of Madrid</title>
     <style>
         #wrapper {
@@ -36,76 +35,98 @@
 </head>
 
 <body>
-    <section id="map_section"><iframe id="mapframe"
-            src="/home/ivan/Escritorio/Personal/Practicas_Uni/WebSemantica/app/templates/map.html"
-            style="position:absolute;top:0;left:0;width:50%;height:100%;"></iframe></section>
+    <section id="map_section"><iframe id="mapframe" src="templates/map" style="position:absolute;top:0;left:0;width:50%;height:100%;"></iframe></section>
     <section id="logo_section" style="position:absolute;top:0;right:0;width:50%;height:100%">
-        <center> <img src="https://www.businesshealthy.org/wp-content/uploads/2016/01/City-Air-logo.gif" alt="Logo"
+        <center> <img src="https://www.intuswindows.com/wp-content/uploads/2016/04/Logo-energy-conservation-Round_v3.png" alt="Logo"
                 class="responsive" style="width:25%;height:25%; margin-top: 75px; margin-right: 22px;"> </center>
     </section>
     <section id="buttons_section" style="position:absolute;top:25%;right:0;width:49%;height:75%;">
         <div class="container">
-            <form action="/home/ivan/Escritorio/Personal/Practicas_Uni/WebSemantica/app/run.py"
-                style="margin-top: 100px; margin-left: 50px;">
-                <p class="text-center" style="margin-right: 80px;">Customization</p>
-                <label for="buildings">All buildings</label>
-                <select name="buildings" id="buildings" multiple style="margin-left: 10px;">
-                    <option value="edificio1">edificio1</option>
-                    <option value="edificio2">edificio2</option>
-                    <option value="edificio3">edificio3</option>
-                    <option value="edificio4">edificio4</option>
+            <form style="margin-top: 100px; margin-left: 50px;">
+                <h2><p class="text-center" style="margin-right: 80px;">Query Parameters</p></h2>
+                <label for="building_name">Select Building</label>
+                <select id="building_name" style="margin-left: 10px;">
+                    {% for elem in building %}
+                    <option value={{elem}}>{{elem}}</option>
+                    {% endfor %}
                 </select>
-                <label for="all types of buildings" style="margin-left: 22px;">All types of buildings</label>
-                <select name="all types of buildings" id="all types of buildings" multiple style="margin-left: 12px;">
-                    <option value="type1">type1</option>
-                    <option value="type2">type2</option>
-                    <option value="type3">type3</option>
-                    <option value="type4">type4</option>
+                <label for="building_type" style="margin-left: 22px;">Select Building Type</label>
+                <select id="building_type" style="margin-left: 12px;">
+                    {% for elem in building_type %}
+                    <option value={{elem}}>{{elem}}</option>
+                    {% endfor %}
                 </select>
                 <br>
-                <label for="all districts">All districts</label>
-                <select name="all districts" id="all districts" multiple style="margin-left: 19px;">
-                    <option value="disc1">disc1</option>
-                    <option value="disc2">disc2</option>
-                    <option value="disc3">disc3</option>
-                    <option value="disc4">disc4</option>
+                <label for="all districts">Select District</label>
+                <select id="district" style="margin-left: 19px;">
+                    {% for elem in district %}
+                    <option value={{elem}}>{{elem}}</option>
+                    {% endfor %}
                 </select>
-                <label for="all neighborhoods" style="margin-left: 43px;">All neighborhoods</label>
-                <select name="all neighborhoods" id="all neighborhoods" multiple style="margin-left: 30px;">
-                    <option value="neigh1">neigh1</option>
-                    <option value="neigh2">neigh2</option>
-                    <option value="neigh3">neigh3</option>
-                    <option value="neigh4">neigh4</option>
+                <label for="all neighborhoods" style="margin-left: 43px;">Select Neighborhood</label>
+                <select id="neighborhood" style="margin-left: 10px;">
+                    {% for elem in neighborhood %}
+                    <option value={{elem}}>{{elem}}</option>
+                    {% endfor %}
                 </select>
                 <br>
-                <label for="latest year">Latest year</label>
-                <select name="latest year" id="latest year" multiple style="margin-left: 16px;">
-                    <option value="year1">year1</option>
-                    <option value="year2">year2</option>
-                    <option value="year3">year3</option>
-                    <option value="year4">year4</option>
+                <label for="latest year">Select Year</label>
+                <select name="latest year" id="year" style="margin-left: 40px;">
+                    {% for elem in year %}
+                    <option value={{elem}}>{{elem}}</option>
+                    {% endfor %}
                 </select>
-                <label for="latest month" style="margin-left: 40px;">Latest month</label>
-                <select name="latest month" id="latest month" multiple style="margin-left: 66px;">
-                    <option value="month1">month1</option>
-                    <option value="month2">month2</option>
-                    <option value="month3">month3</option>
-                    <option value="month4">month4</option>
+                <label for="latest month" style="margin-left: 40px;">Select Month</label>
+                <select name="latest month" id="month" style="margin-left: 66px;">
+                    {% for elem in month %}
+                    <option value={{elem}}>{{elem}}</option>
+                    {% endfor %}
                 </select>
                 <br><br>
-                <input type="submit" value="Filter" style="margin-left: 185px;">
+                    <div class=button style="margin-left: 185px;"> 
+                        <input class="button" type = "button" onclick="send_form(
+                            document.getElementById('building_name').value,
+                            document.getElementById('building_type').value,
+                            document.getElementById('district').value,
+                            document.getElementById('neighborhood').value,
+                            document.getElementById('year').value,
+                            document.getElementById('month').value)" 
+                        value = "Register">
+                    </div>
+
             </form>
         </div>
     </section>
-    <!-- Hold down the Ctrl (windows) or Command (Mac) button to select multiple options. -->
+    <script type = "text/javascript">               
+        function send_form(building_name, building_type, district, neighborhood, year, month){   
+            
+                const jsonString = JSON.stringify({
+                    building_name: building_name, 
+                    building_type: building_type, 
+                    district: district, 
+                    neighborhood: neighborhood, 
+                    year: year,
+                    month: month
+                });
+                const xhr = new XMLHttpRequest();
 
-    <!-- este <script> se puede borrar -->
-    <script>
-        const myIframe = document.getElementById("mapframe");
-        function reloadMap() {
-            myIframe.contentWindow.location.reload();
+                xhr.open("POST", "/process/query"); 
+                xhr.setRequestHeader("Content-Type", "application/json");
+                xhr.send(jsonString);
+                
+                xhr.onreadystatechange = function() { 
+                    if(this.readyState == 4)
+                        if (this.status == 201) {
+                            const myIframe = document.getElementById("mapframe");
+                            myIframe.contentWindow.location.reload();
+                        }else{
+                            alert("Error: No se pudo realizar la solicitud de query")
+                        }
+                }
         }
+    
     </script>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
