--- a/HandsOn/Group27/app/templates/index.html
+++ b/HandsOn/Group27/app/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" href="https://www.intuswindows.com/wp-content/uploads/2016/04/Logo-energy-conservation-Round_v3.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
