--- a/HandsOn/Group27/app/templates/index.html
+++ b/HandsOn/Group27/app/templates/index.html
@@ -7,9 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    
     <title>Public Energy Consumption in Madrid</title>
     <style>
+
+        body
+        {
+            margin: 0;
+            height: 100vh;
+            background-color: #e0e5ec;
+            display: grid;
+            place-items: center;
+        }
+        
         #wrapper {
             width: auto;
             height: auto;
@@ -44,54 +54,92 @@
     <section id="buttons_section" style="position:absolute;top:25%;right:0;width:49%;height:75%;">
         <div class="container">
             <form style="margin-top: 100px; margin-left: 50px;">
-                <h2><p class="text-center" style="margin-right: 80px;">Query Parameters</p></h2>
-                <label for="building_name">Select Building</label>
-                <select id="building_name" style="margin-left: 10px;">
-                    <option value=default>All</option>
-                    {% for elem in building %}
-                    <option value="{{elem}}">{{elem}}</option>
-                    {% endfor %}
-                </select>
-                <label for="building_type" style="margin-left: 22px;">Select Building Type</label>
-                <select id="building_type" style="margin-left: 12px;">
-                    <option value=default>All</option>
-                    {% for elem in building_type %}
-                    <option value="{{elem}}">{{elem}}</option>
-                    {% endfor %}
-                </select>
+                <h2><p class="text-center" style="margin-right: 80px;">Public Energy Visor</p></h2>
+                
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <label class="input-group-text" for="inputGroupSelect01" style="width:130px;">Building</label>
+                    </div>
+                    <select class="custom-select" id="building_name">
+                        <option value=default>All</option>
+                        {% for elem in building %}
+                        <option value="{{elem}}">{{elem}}</option>
+                        {% endfor %}
+                    </select>
+                  </div> 
+
+                <p>
+                    
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                          <label class="input-group-text" for="inputGroupSelect01" style="width:130px;">Building Type</label>
+                        </div>
+                        <select class="custom-select" id="building_type">
+                            <option value=default>All</option>
+                            {% for elem in building_type %}
+                            <option value="{{elem}}">{{elem}}</option>
+                            {% endfor %}
+                        </select>
+                      </div> 
+                <p>
+
+                    
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                          <label class="input-group-text" for="inputGroupSelect01" style="width:130px;">District</label>
+                        </div>
+                        <select class="custom-select" id="district">
+                            <option value=default>All</option>
+                            {% for elem in district %}
+                            <option value="{{elem}}">{{elem}}</option>
+                            {% endfor %}
+                        </select>
+                      </div> 
+
+                <p>
+
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                          <label class="input-group-text" for="inputGroupSelect01" style="width:130px;">Neighborhood</label>
+                        </div>
+                        <select class="custom-select" id="neighborhood">
+                            <option value=default>All</option>
+                            {% for elem in neighborhood %}
+                            <option value="{{elem}}">{{elem}}</option>
+                            {% endfor %}
+                        </select>
+                      </div> 
+                </p>
+                <p>
+
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                          <label class="input-group-text" for="inputGroupSelect01" style="width:130px;">Year</label>
+                        </div>
+                        <select class="custom-select" id="year">
+                            <option value=default>Latest</option>
+                            {% for elem in year %}
+                            <option value="{{elem}}">{{elem}}</option>
+                            {% endfor %}
+                        </select>
+                      </div>  
+            <p>
+                
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <label class="input-group-text" for="inputGroupSelect01" style="width:130px;">Month</label>
+                    </div>
+                    <select class="custom-select" id="month">
+                        <option value=default>Latest</option>
+                        {% for elem in month %}
+                        <option value="{{elem}}">{{elem}}</option>
+                        {% endfor %}
+                    </select>
+                  </div>            
+            </p>
                 <br>
-                <label for="all districts">Select District</label>
-                <select id="district" style="margin-left: 19px;">
-                    <option value=default>All</option>
-                    {% for elem in district %}
-                    <option value="{{elem}}">{{elem}}</option>
-                    {% endfor %}
-                </select>
-                <label for="all neighborhoods" style="margin-left: 43px;">Select Neighborhood</label>
-                <select id="neighborhood" style="margin-left: 10px;">
-                    <option value=default>All</option>
-                    {% for elem in neighborhood %}
-                    <option value="{{elem}}">{{elem}}</option>
-                    {% endfor %}
-                </select>
-                <br>
-                <label for="latest year">Select Year</label>
-                <select name="latest year" id="year" style="margin-left: 40px;">
-                    <option value=default>Latest</option>
-                    {% for elem in year %}
-                    <option value="{{elem}}">{{elem}}</option>
-                    {% endfor %}
-                </select>
-                <label for="latest month" style="margin-left: 40px;">Select Month</label>
-                <select name="latest month" id="month" style="margin-left: 66px;">
-                    <option value=default>Latest</option>
-                    {% for elem in month %}
-                    <option value="{{elem}}">{{elem}}</option>
-                    {% endfor %}
-                </select>
-                <br><br>
                     <div class=button style="margin-left: 185px;"> 
-                        <input class="button" type = "button" onclick="send_form(
+                        <input type=button class="btn btn-secondary btn disabled" onclick="send_form(
                             document.getElementById('building_name').value,
                             document.getElementById('building_type').value,
                             document.getElementById('district').value,
