Assignment 5 - Initial version

--- a/HandsOn/Group27/app/templates/index.html
+++ b/HandsOn/Group27/app/templates/index.html
@@ -53,12 +53,11 @@
     </section>
     <section id="buttons_section" style="position:absolute;top:25%;right:0;width:49%;height:75%;">
         <div class="container">
-            <form style="margin-top: 100px; margin-left: 50px;">
-                <h2><p class="text-center" style="margin-right: 80px;">Public Energy Visor</p></h2>
-                
+            <form style="margin-top: 100px; margin-left: 50px; margin-right: 50px;">
+                <h2><p class="text-center" style="margin-left: 50px; margin-right: 50px;">Public Energy Visor</p></h2>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
-                      <label class="input-group-text" for="inputGroupSelect01" style="width:130px;">Building</label>
+                        <label class="input-group-text" for="inputGroupSelect01" style="width:130px;">Building</label>
                     </div>
                     <select class="custom-select" id="building_name">
                         <option value=default>All</option>
@@ -82,7 +81,6 @@
                         </select>
                       </div> 
                 <p>
-
                     
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
